<resources>
    <string name="app_name">NonoConverter</string>
    <string name="LOAD_button">LOAD IMAGE</string>
    <string name="CONERT_button">CONVERT</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="zero"></string>
    <string name="custom_wdth">14</string>
    <string name="custom_hght">88</string>
    <string name="message_click">Click on image to crop.</string>
</resources>
