<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">
    <!---Two previous lines made for disable autofocus-->

    <TextView
        android:id="@+id/tvWidth"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/width"
        android:textAlignment="center"
        android:textColor="#8492A6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/msgClick"
        app:layout_constraintEnd_toStartOf="@+id/tvHeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/height"
        android:textAlignment="center"
        android:textColor="#8492A6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/widthText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvWidth"
        app:layout_constraintTop_toTopOf="@+id/tvWidth" />


    <ImageView
        android:id="@+id/ivImg"
        android:scaleType="centerCrop"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/image_back"
        android:contentDescription="@null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnLoad"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:text="@string/LOAD_button"
        android:textColor="#ffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConvert"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:background="@drawable/button_style"
        android:enabled="false"
        android:text="@string/CONERT_button"
        android:textColor="#ffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLoad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLoad"
        app:layout_constraintTop_toTopOf="@+id/btnLoad" />

    <EditText
        android:id="@+id/widthText"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zero"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#8492A6"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWidth"
        app:layout_constraintStart_toStartOf="@+id/tvWidth"
        app:layout_constraintTop_toBottomOf="@+id/tvWidth"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/heightText"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zero"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="#8492A6"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tvHeight"
        app:layout_constraintStart_toStartOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/msgClick"
        android:layout_width="208dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ivImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>